2018-05-31  Mark Wielaard  <mark@klomp.org>

	* dwarf_dieoffset.c: Check die->cu != NULL. Return -1, not ~0ul
	on failure.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* dwarf_cuoffset.c (dwarf_cuoffset): Check die->cu is not NULL.
	* dwarf_die_addr_die.c (dwarf_die_addr_die): Also search split
	Dwarfs.
	* libdwP.h (struct Dwarf): Add split_tree field.
	(__libdw_find_split_dbg_addr): New internal function definition.
	(__libdw_finddbg_cb): Likewise.
	* libdw_find_split_unit.c (__libdw_find_split_unit): Insert split
	Dwarf into skeleton dbg split_tree.
	* libdw_findcu.c (__libdw_finddbg_cb): New function.
	(__libdw_find_split_dbg_addr): Likewise.
	* dwarf_end (dwarf_end): Destroy split_tree.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add GNU DebugFission list entry encodings
	DW_LLE_GNU_end_of_list_entry,
	DW_LLE_GNU_base_address_selection_entry,
	DW_LLE_GNU_start_end_entry and DW_LLE_GNU_start_length_entry.
	* dwarf_ranges.c (__libdw_read_begin_end_pair_inc): Handle
	GNU DebugFission list entries.

2018-05-28  Mark Wielaard  <mark@klomp.org>

	* libdw_find_split_unit.c (__libdw_find_split_unit): End split_dwarf
	only after we tried every unit id in it.

2018-04-07  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (struct Dwarf_CU): Add locs_base.
	(__libdw_cu_locs_base): New static inline function.
	* libdw_findcu.c (__libdw_intern_next_unit): Initialize locs_base.
	* dwarf_begin_elf.c (valid_p): Create fake_loclists_cu if necessary.
	* dwarf_end.c (dwarf_end): Clean up fake_loclists_cu.
	* dwarf_getlocation.c (initial_offset): Handle .debug_loclists.
	(getlocations_addr): Likewise.
	(dwarf_getlocation_addr): Likewise.
	* dwarf_getlocation_attr.c (attr_form_cu): Use fake_loclists_cu for
	DWARF5.
	(initial_offset): Handle DW_FORM_loclistx.
	* dwarf_ranges.c (__libdw_read_begin_end_pair_inc): Handle
	.debug_loclists.
	* libdwP.h (struct Dwarf): Add fake_loclists_cu.

2018-04-12  Mark Wielaard  <mark@klomp.org>
